# Sravya

./: .gitignore  .prettierignore  SPEC.md  Untitled.p12  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: cd.yml  ci.yml  diagnose.yml  restore-portfolio.yml
server/: .env.example  .gitignore  app.js  index.js  package-lock.json  package.json
server/db/: database.js
server/middleware/: auth.js
server/routes/: covers.js  health.js  sync.js  tracks.js
server/tests/: api.test.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_phase2.sql  003_lan_sync.sql
src-tauri/src/: commands.rs  error.rs  events.rs  lib.rs  main.rs
src-tauri/src/adapters/: applemusic.rs  audio.rs  db.rs  fs_scan.rs  lrclib.rs  mod.rs  musicbrainz.rs  scanner.rs  spotify.rs  tagger.rs  youtube.rs  ytdlp.rs
src-tauri/src/cloud/: cloud_client.rs  mod.rs  uploader.rs
src-tauri/src/core/: downloader.rs  importer.rs  library.rs  mod.rs  playback.rs  player.rs  playlist.rs  search.rs  sharing.rs  sync.rs
src-tauri/src/crypto/: auth.rs  identity.rs  keychain.rs  keys.rs  mod.rs  sharing_crypto.rs
src-tauri/src/lan/: auth.rs  change_log.rs  discovery.rs  mdns.rs  mod.rs  protocol.rs  server.rs  sync_client.rs
src/api/: index.ts
src/components/: AlbumGrid.tsx  BottomTabBar.tsx  DownloadToast.tsx  EqualizerPanel.tsx  Lyrics.tsx  NowPlayingBar.tsx  NowPlayingFull.tsx  Sidebar.tsx  TrackList.tsx
src/hooks/: useClipboardMonitor.ts  useDownloadEvents.ts  useLanSyncEvents.ts  useLibraryEvents.ts  usePlatform.ts  usePlayback.ts  useTheme.ts
src/lib/: utils.ts
src/state/: downloadQueue.ts  lanSync.ts  library.ts  player.ts
src/styles/: globals.css
src/test/: setup.tsx
src/views/: Library.tsx  Playlists.tsx  Search.tsx  Settings.tsx  Sync.tsx
tests/: helpers.tsx  utils.test.ts
tests/components/: NowPlayingBar.test.tsx  Sidebar.test.tsx
tests/state/: downloadQueue.test.ts  lanSync.test.ts  library.test.ts  player.test.ts
tests/views/: Playlists.test.tsx  Sync.test.tsx
