[package]
name = "sravya"
version = "0.1.0"
description = "Sravya — local-first music player"
authors = []
edition = "2021"

[lib]
name = "sravya_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sravya"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

rodio = { version = "0.19", features = ["symphonia-all"] }
lofty = "0.22"
tantivy = "0.22"

axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "stream", "json"] }

hmac = "0.12"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
age = { version = "0.10", features = ["async"] }
argon2 = "0.5"
hex = "0.4"
base64 = "0.22"
rand = "0.8"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
mdns-sd = "0.11"
if-addrs = "0.13"
dirs = "5"
url = "2"
urlencoding = "2"
regex = "1"
toml = "0.8"

anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(not(target_os = "ios"))'.dependencies]
notify = "8"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-openssl"] }

[target.'cfg(target_os = "ios")'.dependencies]
tauri-plugin-barcode-scanner = "2"
security-framework = "2"
objc2 = "0.5"
objc2-av-foundation = { version = "0.3", features = ["AVAudioSession"] }

[dev-dependencies]
wiremock = "0.6"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
